--- a/setup.cfg
+++ b/setup.cfg
@@ -16,8 +16,8 @@ classifiers =
 packages =
     caveman_wrapper
 install_requires =
-    numpy==2.0.1
     wheel==0.45.1
+    pysam==0.23.3
 python_requires = >=3.6
 package_dir =
     =src
