Add strace and gdb to singularity config for debugging

--- a/singularity_config/cgp_caveman_wrapper.config
+++ b/singularity_config/cgp_caveman_wrapper.config
@@ -10,7 +10,7 @@ From: <path/to/cgpcavemanwrapper_{version}.sif>
     export TZ=UTC
     export DEBIAN_FRONTEND=noninteractive
 
-    apt-get update && apt-get install -y python3.10 python3-pip vim less
+    apt-get update && apt-get install -y python3.10 python3-pip vim less gdb strace
 
     # Upgrade pip + install required packages
     python3 -m pip install --upgrade pip
